[project]
name = "yakayaka"
version = "1.0.0"
description = "monitoring and recording livestreams"
authors = ["ntrrpt"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chat-downloader>=0.2.8",
    "loguru>=0.7.3",
    "prettytable>=3.15.1",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "streamlink>=7.1.3",
    "yt-dlp>=2025.2.19",
]

[tool.uv]
dev-dependencies = [
    "ruff"
]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"