[project]
name = "yakayaka"
version = "1.0.0"
description = "monitoring and recording livestreams"
authors = ["ntrrpt"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apprise>=1.9.4",
    "chat-downloader>=0.2.8",
    "loguru>=0.7.3",
    "prettytable>=3.15.1",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "stopwatch-py>=2.0.1",
    "streamlink>=7.6.0",
    "yt-dlp>=2025.9.5",
]

[dependency-groups]
dev = [
    "ruff"
]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
