[project]
name = "yk"
version = "2.0.0"
description = "monitoring and recording livestreams"
authors = [
    {name = "ntrrpt"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apprise>=1.9.4",
    "chat-downloader @ git+https://github.com/ntrrpt/chat-downloader.git@354931cbe2be7acc635f08a724e8f85f7b3f3dc2",
    "loguru>=0.7.3",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "stopwatch-py>=2.0.1",
    "streamlink>=7.6.0",
    "tabulate[widechars]>=0.9.0",
    "tomli-w>=1.2.0",
    "validators>=0.35.0",
    "yt-dlp>=2025.10.22",
]

[dependency-groups]
dev = [
    "ruff"
]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
